# ppca-cpp

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  EQUATIONS.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build.yml
cpp/include/ppca/: ppca.hpp
cpp/include/ppca/detail/: sampling.hpp  utils.hpp
cpp/src/: _bindings.cpp  ppca.cpp  ppca_em.cpp  ppca_infer.cpp
cpp/src/detail/: sampling.cpp
docs/: EQUATIONS.md  ppca.md
examples/: missing_data_imputation.py  online_vs_batch.py  posterior_sampling.py  quick_start.py
notebooks/: demo.ipynb
scripts/: run_tests.sh
src/cpp/: CMakeLists.txt  ppca.cpp  ppca.hpp  ppca_em.cpp  ppca_infer.cpp  utils.cpp  utils.hpp
src/lib_ppca/: core.py
src/python/ppca/: _ppca.py  _ppca_bindings.cpp  _ppca_bindings.pyi
tests/: test_batched_equivalence.py  test_missing_and_probabilistic.py  test_sklearn.py
tests/python/: test_batched_equivalence.py  test_missing_and_probabilistic.py  test_sklearn.py
